# gol

./: .pre-commit-config.yaml  README.md  flake.nix  gol.cabal
app/: main.hs
src/: Life.hs
test/: LifeSpec.hs
