cabal-version: 2.2
name:          gol
version:       0.0.0
build-type:    Simple

library
  exposed-modules:    Life
  other-modules:      Paths_gol
  hs-source-dirs:     src
  default-extensions: ImportQualifiedPost
  build-depends:
    , base    >=4.9.1.0 && <5
    , matrix

  ghc-options:
    -Wall -Werror -fwarn-tabs -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -Wno-type-defaults -Wunused-packages

  default-language:   Haskell2010

executable gol
  main-is:            main.hs
  other-modules:      Paths_gol
  hs-source-dirs:     app
  default-extensions: ImportQualifiedPost
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , ansi-terminal
    , base           >=4.9.1.0 && <5
    , conduit
    , gol
    , random

  default-language:   Haskell2010

test-suite gol-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    LifeSpec
    Paths_gol

  hs-source-dirs:     test
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -freverse-errors -threaded -rtsopts -with-rtsopts=-N
    -Wunused-packages -Werror -fwarn-tabs -Wincomplete-uni-patterns

  build-depends:
    , base    >=4.9.1.0 && <5
    , gol
    , hspec
    , matrix

  default-language:   Haskell2010
